# Cnossos-EU-SWE

./: .gitignore  README.md
CNOSSOS-EU Task 2 - distrib 12-05-2014/: Cnossos-EU.sln  Licence.EU.txt  Makefile.am  User and programmers guide.docx  configure.ac
CNOSSOS-EU Task 2 - distrib 12-05-2014/Cnossos-EU/: Cnossos-EU.vcxproj  Cnossos-EU.vcxproj.filters  CopyToClipboard.cpp  ReadMe.txt  TestCnossos.cpp  stdafx.cpp  stdafx.h
CNOSSOS-EU Task 2 - distrib 12-05-2014/Cnossos-EU/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc100.idb
CNOSSOS-EU Task 2 - distrib 12-05-2014/Cnossos-EU/Release/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog
CNOSSOS-EU Task 2 - distrib 12-05-2014/CnossosPropagation/: CnossosPropagation.cpp  CnossosPropagation.h  CnossosPropagation.vcxproj  CnossosPropagation.vcxproj.filters  doc.dox  stdafx.cpp
CNOSSOS-EU Task 2 - distrib 12-05-2014/CnossosPropagation/Debug/: CL.read.1.tlog  CL.write.1.tlog  CnossosPropagation.write.1.tlog  CnossosPropagation_manifest.rc  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
CNOSSOS-EU Task 2 - distrib 12-05-2014/CnossosPropagation/Release/: CL.read.1.tlog  CL.write.1.tlog  CnossosPropagation.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog
CNOSSOS-EU Task 2 - distrib 12-05-2014/Debug/: CnossosPropagation.exp  CnossosPropagation.ilk  CnossosPropagation.lib  HarmonoiseP2P.bsc  HarmonoiseP2P.exp  HarmonoiseP2P.ilk  HarmonoiseP2P.lib  PropagationPath.lib  SampleFromDieter.ilk  SimpleXML.lib  TestCnossos.ilk  TestCnossosCPP.ilk  TestCnossosDLL.ilk  TestCnossosEXT.ilk
CNOSSOS-EU Task 2 - distrib 12-05-2014/HarmonoiseP2P/: HarmonoiseP2P.vcxproj  HarmonoiseP2P.vcxproj.filters  PointToPoint.cpp  PointToPoint.hpp  PointToPointEx.hpp  stdafx.cpp
CNOSSOS-EU Task 2 - distrib 12-05-2014/HarmonoiseP2P/Debug/: BscMake.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  HarmonoiseP2P.lastbuildstate  HarmonoiseP2P.write.1.tlog  bscmake.read.1.tlog  bscmake.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  (+4 more)
CNOSSOS-EU Task 2 - distrib 12-05-2014/MingW/: Make.Cnossos.bat
CNOSSOS-EU Task 2 - distrib 12-05-2014/PropagationPath/: CNOSSOS-2018.cpp  CNOSSOS-2018.h  CalculationMethod.cpp  CalculationMethod.h  ElementarySource.h  ErrorMessage.h  Geometry3D.h  ISO-9613-2.cpp  ISO-9613-2.h  JRC-2012.cpp  JRC-2012.h  JRC-draft-2010.cpp  JRC-draft-2010.h  Material.cpp  Material.h  MeanPlane.cpp  MeanPlane.h  MeteoCondition.cpp  MeteoCondition.h  PathParseXML.cpp  PathParseXML.h  PathResult.cpp  PathResult.h  PropagationPath.cpp  PropagationPath.h  PropagationPath.vcxproj  PropagationPath.vcxproj.filters  ReadMe.txt  ReferenceObject.cpp  ReferenceObject.h  SelectMethod.cpp  SourceGeometry.cpp  SourceGeometry.h  Spectrum.cpp  Spectrum.h  SystemClock.cpp  SystemClock.h  VerticalExt.h  source_format_dgmr.cpp
CNOSSOS-EU Task 2 - distrib 12-05-2014/Release/: CnossosPropagation.exp  CnossosPropagation.lib  HarmonoiseP2P.exp  HarmonoiseP2P.lib  SimpleXML.lib  test.tmp  test.txt  toto.txt
CNOSSOS-EU Task 2 - distrib 12-05-2014/SimpleXML/: ReadMe.txt  SimpleXML.cpp  SimpleXML.h  SimpleXML.vcxproj  SimpleXML.vcxproj.filters  expat.h  expat_external.h  xmlparse.c
CNOSSOS-EU Task 2 - distrib 12-05-2014/TestCnossosCPP/: ReadMe.txt  ShowLibraries.cpp  TestCnossosCPP.cpp  TestCnossosCPP.vcxproj  TestCnossosCPP.vcxproj.filters  stdafx.cpp  stdafx.h
CNOSSOS-EU Task 2 - distrib 12-05-2014/TestCnossosDLL/: TestCnossosDLL.cpp  TestCnossosDLL.vcxproj  TestCnossosDLL.vcxproj.filters  stdafx.cpp  stdafx.h  test.txt
CNOSSOS-EU Task 2 - distrib 12-05-2014/TestCnossosEXT/: ISO_WithMeteo.h  TestCnossosEXT.cpp  TestCnossosEXT.vcxproj  TestCnossosEXT.vcxproj.filters  stdafx.cpp  stdafx.h
CNOSSOS-EU Task 2 - distrib 12-05-2014/data/: CNOSSOS_Road_Output.xml  CpuTime.xlsx  Lw freefield - hard.xml  Lw freefield - soft.xml  Lw hemispherical - hard.xml  Lw hemispherical - soft.xml  Lw undefined - hard.xml  Lw undefined - soft.xml  area source.xml  barrier 1m - 100m.xml  barrier 1m - 200m.xml  barrier 1m - 20m.xml  barrier 1m - 500m.xml  barrier 1m - 50m.xml  barrier 2m - 100m.xml  barrier 2m - 200m.out.xml  barrier 2m - 200m.xml  barrier 2m - 20m.xml  barrier 2m - 500m.xml  barrier 2m - 50m.xml  barrier 4m - 100m.xml  barrier 4m - 200m.xml  barrier 4m - 20m.xml  barrier 4m - 500m.xml  barrier 4m - 50m.xml  depressed - 100m.xml  depressed - 10m.xml  depressed - 200m.xml  depressed - 20m.xml  depressed - 500m.xml  depressed - 50m.xml  depressed+barrier - 100m.xml  depressed+barrier - 10m.xml  depressed+barrier - 200m.xml  depressed+barrier - 20m.xml  depressed+barrier - 500m.xml  depressed+barrier - 50m.xml  embankment-1m - 100m.xml  embankment-1m - 10m.xml  embankment-1m - 200m.xml  (+83 more)
CNOSSOS-EU Task 2 - distrib 12-05-2014/linux/: makefile
CNOSSOS-EU Task 2 - distrib 12-05-2014/m4/: ax_prog_matlab.m4
CNOSSOS-EU Task 2 - distrib 12-05-2014/octave/: Makefile.am  PathParseOctave.cpp  PathParseOctave.h  cnossos_flat.cpp  cnossos_flat.h  cnossos_full.cpp  cnossos_full.h  flat.xml  makefile  spec.txt  usage.md
CNOSSOS-EU Task 2 - distrib 12-05-2014/system/: environment.h  unixgcc.cpp  unixgcc.h
CNOSSOS-EU Task 2 - distrib 12-05-2014/win32/: makefile
cmakesourcemodel/CNOSSOS_DLL_CONSOLE/: CMakeLists.txt  CNOSSOS_DLL_CONSOLE.cpp  CNOSSOS_DLL_CONSOLE.vcxproj  resource.h  stdafx.cpp
cmakesourcemodel/CNOSSOS_ROADNOISE_DLL/: CMakeLists.txt  CNOSSOS_ROADNOISE_DLL.cpp  CNOSSOS_ROADNOISE_DLL.h  CNOSSOS_ROADNOISE_DLL_AUX.cpp  CNOSSOS_ROADNOISE_DLL_AUX.h  CNOSSOS_ROADNOISE_DLL_CONST.cpp  CNOSSOS_ROADNOISE_DLL_CONST.h  CNOSSOS_ROADNOISE_DLL_DATA.cpp  CNOSSOS_ROADNOISE_DLL_DATA.h  CNOSSOS_Road_Input.xml  CNOSSOS_Road_Output.xml  CNOSSOS_Road_Params.xml  CNOSSOS_Road_Surfaces.xml  resource.h  stdafx.cpp
(+338 files in other folders)
