#SUBDIRS= harmonoisep2p propagationpath octave
noinst_LIBRARIES = libHarmonoise.a libPropagation.a

libHarmonoise_a_SOURCES = \
  $(top_srcdir)/HarmonoiseP2P/PointToPoint.cpp \
  $(top_srcdir)/HarmonoiseP2P/PointToPoint.cpp
# lib_LTLIBRARIES = libHarmonoise.la
# libHarmonoise_la_SOURCES = PointToPoint.cpp
# libHarmonoise_la_LDFLAGS = -version-info 0:0:0

libPropagation_a_SOURCES = \
  $(top_srcdir)/PropagationPath/CalculationMethod.cpp \
  $(top_srcdir)/PropagationPath/CalculationMethod.h \
  $(top_srcdir)/PropagationPath/CNOSSOS-2018.cpp \
  $(top_srcdir)/PropagationPath/CNOSSOS-2018.h \
  $(top_srcdir)/PropagationPath/ISO-9613-2.cpp \
  $(top_srcdir)/PropagationPath/ISO-9613-2.h \
  $(top_srcdir)/PropagationPath/JRC-2012.cpp \
  $(top_srcdir)/PropagationPath/JRC-2012.h \
  $(top_srcdir)/PropagationPath/JRC-draft-2010.cpp \
  $(top_srcdir)/PropagationPath/JRC-draft-2010.h
# Material.o MeanPlane.o MeteoCondition.o PathParseXML.o PathResult.o PropagationPath.o ReferenceObject.o SelectMethod.o SourceGeometry.o Spectrum.o SystemClock.o unixgcc.o
# lib_LTLIBRARIES = libPropagation.la
# libPropagation_la_SOURCES = CalculationMethod.cpp CNOSSOS-2018.cpp ISO-9613-2.cpp JRC-2012.cpp JRC-draft-2010.cpp
# libPropagation_la_LDFLAGS = -version-info 0:0:0
